# codex-telegram-bridge

./: .gitignore  README.md  pyproject.toml
scripts/: install.ps1
src/codex_telegram_bridge/: __init__.py  bot.py  config_store.py  diagnostics.py  main.py  models.py  provider_base.py  runtime.py  templates.py  translation.py  web.py
src/codex_telegram_bridge/providers/: codex_cli.py
src/codex_telegram_bridge/static/: index.html
tests/: test_codex_provider.py  test_config_store.py  test_diagnostics.py  test_runtime.py
